--- a/languages/larpwright-de_DE.po
+++ b/languages/larpwright-de_DE.po
@@ -1,13 +1,13 @@
-# POT for Plugin - Larpwright Design Tools (latest release) 
+# Translation for Plugin - Larpwright Design Tools (latest release) in German
 # This file is distributed under the same license as the Plugin - Larpwright Design Tools (latest release) package.
 msgid ""
 msgstr ""
 "Project-Id-Version: Plugin - Larpwright Design Tools (latest release)\n"
 "POT-Creation-Date: 2023-03-31 15:39+0900\n"
-"PO-Revision-Date: 2023-05-08 16:16+0900\n"
+"PO-Revision-Date: 2023-05-08 15:57+0900\n"
 "Last-Translator: Björn-Ole Kamm <translateœb-ok.de>\n"
 "Language-Team: \n"
-"Language: en\n"
+"Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,722 +16,723 @@ msgstr ""
 
 #. Description of the plugin
 msgid "The plugin provides several custom post types and further functionality for creating larp scripts in a team."
-msgstr ""
+msgstr "Das Plugin bietet mehrere Custom Post Types und weitere Funktionen zur Erstellung von Larp-Skripten im Team."
 
 #: larpwright.php:58
 msgctxt "post type general name"
 msgid "Characters"
-msgstr ""
+msgstr "Charaktere"
 
 #: larpwright.php:59
 msgctxt "post type singular name"
 msgid "Character"
-msgstr ""
+msgstr "Charakter"
 
 #: larpwright.php:60
 msgid "Characters"
-msgstr ""
+msgstr "Charaktere"
 
 #: larpwright.php:61
 msgid "Parent Character"
-msgstr ""
+msgstr "Übergeordneter Charakter"
 
 #: larpwright.php:62
 msgid "All Characters"
-msgstr ""
+msgstr "Alle Charaktere"
 
 #: larpwright.php:63
 msgid "View Character"
-msgstr ""
+msgstr "Charakter ansehen"
 
 #: larpwright.php:64
 msgid "Add New Character"
-msgstr ""
+msgstr "Neuen Charakter erstellen"
 
 #: larpwright.php:65 larpwright.php:318 larpwright.php:471 larpwright.php:605
 msgid "Add New"
-msgstr ""
+msgstr "Erstellen"
 
 #: larpwright.php:66
 msgid "Edit Character"
-msgstr ""
+msgstr "Charakter bearbeiten"
 
 #: larpwright.php:67
 msgid "Update Character"
-msgstr ""
+msgstr "Charakter aktualisieren"
 
 #: larpwright.php:68
 msgid "Search Character"
-msgstr ""
+msgstr "Charaktere durchsuchen"
 
 #: larpwright.php:69 larpwright.php:322 larpwright.php:475 larpwright.php:609
 msgid "Not Found"
-msgstr ""
+msgstr "Nicht gefunden"
 
 #: larpwright.php:70 larpwright.php:323 larpwright.php:476 larpwright.php:610
 msgid "Not found in Trash"
-msgstr ""
+msgstr "Nichts im Papierkorb gefunden"
 
 #: larpwright.php:75
 msgid "character"
-msgstr ""
+msgstr "character"
 
 #: larpwright.php:76
 msgid "Character descriptions"
-msgstr ""
+msgstr "Charakterbeschreibungen"
 
 #: larpwright.php:129
 msgctxt "taxonomy general name"
 msgid "Character Types"
-msgstr ""
+msgstr "Charaktertypen"
 
 #: larpwright.php:130
 msgctxt "taxonomy singular name"
 msgid "Character Type"
-msgstr ""
+msgstr "Charaktertyp"
 
 #: larpwright.php:131
 msgid "Search Character Types"
-msgstr ""
+msgstr "Charaktertypen durchsuchen"
 
 #: larpwright.php:132
 msgid "All Character Types"
-msgstr ""
+msgstr "Alle Charaktertypen"
 
 #: larpwright.php:133
 msgid "Parent Character Type"
-msgstr ""
+msgstr "Übergeordneter Charaktertyp"
 
 #: larpwright.php:134
 msgid "Parent Character Type:"
-msgstr ""
+msgstr "Übergeordneter Charaktertyp:"
 
 #: larpwright.php:135
 msgid "Edit Character Type"
-msgstr ""
+msgstr "Charaktertyp bearbeiten"
 
 #: larpwright.php:136
 msgid "Update Character Type"
-msgstr ""
+msgstr "Charaktertyp aktualisieren"
 
 #: larpwright.php:137
 msgid "Add New Character Type"
-msgstr ""
+msgstr "Neuen Charaktertyp erstellen"
 
 #: larpwright.php:138
 msgid "New Character Type"
-msgstr ""
+msgstr "Neuer Charaktertyp"
 
 #: larpwright.php:139
 msgid "Character Types"
-msgstr ""
+msgstr "Charaktertypen"
 
 #: larpwright.php:164
 msgctxt "taxonomy general name"
 msgid "Species"
-msgstr ""
+msgstr "Spezies"
 
 #: larpwright.php:165
 msgctxt "taxonomy singular name"
 msgid "Species"
-msgstr ""
+msgstr "Spezies"
 
 #: larpwright.php:166
 msgid "Search Species"
-msgstr ""
+msgstr "Spezies durchsuchen"
 
 #: larpwright.php:167
 msgid "All Species"
-msgstr ""
+msgstr "Alle Spezies"
 
 #: larpwright.php:168
 msgid "Parent Species"
-msgstr ""
+msgstr "Übergeordnete Spezies"
 
 #: larpwright.php:169
 msgid "Parent Species:"
-msgstr ""
+msgstr "Übergeordnete Spezies:"
 
 #: larpwright.php:170
 msgid "Edit Species"
-msgstr ""
+msgstr "Spezies bearbeiten"
 
 #: larpwright.php:171
 msgid "Update Species"
-msgstr ""
+msgstr "Spezies aktualisieren"
 
 #: larpwright.php:172
 msgid "Add New Species"
-msgstr ""
+msgstr "Neue Spezies erstellen"
 
 #: larpwright.php:173
 msgid "New Species"
-msgstr ""
+msgstr "Neue Spezies"
 
 #: larpwright.php:174
 msgid "Species"
-msgstr ""
+msgstr "Spezies"
 
 #: larpwright.php:200
 msgctxt "taxonomy general name"
 msgid "Professions"
-msgstr ""
+msgstr "Professionen"
 
 #: larpwright.php:201
 msgctxt "taxonomy singular name"
 msgid "Profession"
-msgstr ""
+msgstr "Profession"
 
 #: larpwright.php:202
 msgid "Search Professions"
-msgstr ""
+msgstr "Professionen durchsuchen"
 
 #: larpwright.php:203
 msgid "All Professions"
-msgstr ""
+msgstr "Alle Professionen"
 
 #: larpwright.php:204
 msgid "Parent Profession"
-msgstr ""
+msgstr "Übergeordnete Profession"
 
 #: larpwright.php:205
 msgid "Parent Profession:"
-msgstr ""
+msgstr "Übergeordnete Profession:"
 
 #: larpwright.php:206
 msgid "Edit Profession"
-msgstr ""
+msgstr "Profession bearbeiten"
 
 #: larpwright.php:207
 msgid "Update Profession"
-msgstr ""
+msgstr "Profession aktualisieren"
 
 #: larpwright.php:208
 msgid "Add New Profession"
-msgstr ""
+msgstr "Neue Profession erstellen"
 
 #: larpwright.php:209
 msgid "New Profession"
-msgstr ""
+msgstr "Neue Stimmung"
 
 #: larpwright.php:210
 msgid "Professions"
-msgstr ""
+msgstr "Professionen"
 
 #: larpwright.php:235
 msgctxt "taxonomy general name"
 msgid "In-Game Groups"
-msgstr ""
+msgstr "In-Game-Gruppen"
 
 #: larpwright.php:236
 msgctxt "taxonomy singular name"
 msgid "In-Game Group"
-msgstr ""
+msgstr "In-Game-Gruppe"
 
 #: larpwright.php:237
 msgid "Search Groups"
-msgstr ""
+msgstr "Gruppen durchsuchen"
 
 #: larpwright.php:238
 msgid "All In-Game Groups"
-msgstr ""
+msgstr "Alle In-Game-Gruppen"
 
 #: larpwright.php:239
 msgid "Parent Group"
-msgstr ""
+msgstr "Übergeordnete Gruppe"
 
 #: larpwright.php:240
 msgid "Parent Group:"
-msgstr ""
+msgstr "Übergeordnete Gruppe:"
 
 #: larpwright.php:241
 msgid "Edit Group"
-msgstr ""
+msgstr "Gruppe bearbeiten"
 
 #: larpwright.php:242
 msgid "Update Group"
-msgstr ""
+msgstr "Gruppe aktualisieren"
 
 #: larpwright.php:243
 msgid "Add New Group"
-msgstr ""
+msgstr "Neue Gruppe erstellen"
 
 #: larpwright.php:244
 msgid "New Group Name"
-msgstr ""
+msgstr "Neuer Gruppenname"
 
 #: larpwright.php:245
 msgid "In-Game Groups"
-msgstr ""
+msgstr "In-Game-Gruppen"
 
 #: larpwright.php:272
 msgctxt "taxonomy general name"
 msgid "Attitudes"
-msgstr ""
+msgstr "Haltungen"
 
 #: larpwright.php:273
 msgctxt "taxonomy singular name"
 msgid "Attitude"
-msgstr ""
+msgstr "Haltung"
 
 #: larpwright.php:274
 msgid "Search Attitudes"
-msgstr ""
+msgstr "Haltungen durchsuchen"
 
 #: larpwright.php:275
 msgid "Popular Attitudes"
-msgstr ""
+msgstr "Beliebte Haltungen"
 
 #: larpwright.php:276
 msgid "All Attitudes"
-msgstr ""
+msgstr "Alle Haltungen"
 
 #: larpwright.php:279
 msgid "Edit Attitude"
-msgstr ""
+msgstr "Haltung bearbeiten"
 
 #: larpwright.php:280
 msgid "Update Attitude"
-msgstr ""
+msgstr "Haltung aktualisieren"
 
 #: larpwright.php:281
 msgid "Add New Attitude"
-msgstr ""
+msgstr "Neue Haltung erstellen"
 
 #: larpwright.php:282
 msgid "New Attitude"
-msgstr ""
+msgstr "Neue Haltung"
 
 #: larpwright.php:283
 msgid "Attitudes"
-msgstr ""
+msgstr "Haltungen"
 
 #: larpwright.php:311
 msgctxt "post type general name"
 msgid "Scenes"
-msgstr ""
+msgstr "Szenen"
 
 #: larpwright.php:312
 msgctxt "post type singular name"
 msgid "Scene"
-msgstr ""
+msgstr "Szene"
 
 #: larpwright.php:313
 msgid "Scenes"
-msgstr ""
+msgstr "Szenen"
 
 #: larpwright.php:314
 msgid "Parent Scene"
-msgstr ""
+msgstr "Übergeordnete Szene"
 
 #: larpwright.php:315
 msgid "All Scenes"
-msgstr ""
+msgstr "Alle Szenen"
 
 #: larpwright.php:316
 msgid "View Scene"
-msgstr ""
+msgstr "Szene ansehen"
 
 #: larpwright.php:317
 msgid "Add New Scene"
-msgstr ""
+msgstr "Neue Szene erstellen"
 
 #: larpwright.php:318
 msgid "Edit Scene"
-msgstr ""
+msgstr "Szene bearbeiten"
 
 #: larpwright.php:320
 msgid "Update Scene"
-msgstr ""
+msgstr "Szene aktualisieren"
 
 #: larpwright.php:321
 msgid "Search Scene"
-msgstr ""
+msgstr "Szenen durchsuchen"
 
 #: larpwright.php:328
 msgid "scene"
-msgstr ""
+msgstr "scene"
 
 #: larpwright.php:329
 msgid "Scene descriptions"
-msgstr ""
+msgstr "Szenenbeschreibungen"
 
 #: larpwright.php:364
 msgid "Next scene"
-msgstr ""
+msgstr "Nächste Szene"
 
 #: larpwright.php:373
 msgid "Previous scene"
-msgstr ""
+msgstr "Vorherige Szene"
 
 #: larpwright.php:389
 msgctxt "taxonomy general name"
 msgid "Episodes"
-msgstr ""
+msgstr "Episoden"
 
 #: larpwright.php:390
 msgctxt "taxonomy singular name"
 msgid "Episode"
-msgstr ""
+msgstr "Episode"
 
 #: larpwright.php:391
 msgid "Search Episodes"
-msgstr ""
+msgstr "Episoden durchsuchen"
 
 #: larpwright.php:392
 msgid "All Episodes"
-msgstr ""
+msgstr "Alle Episode"
 
 #: larpwright.php:393
 msgid "Parent Episode"
-msgstr ""
+msgstr "Übergeordnete Episode"
 
 #: larpwright.php:394
 msgid "Parent Episode:"
-msgstr ""
+msgstr "Übergeordnete Episode:"
 
 #: larpwright.php:395
 msgid "Edit Episode"
-msgstr ""
+msgstr "Episode bearbeiten"
 
 #: larpwright.php:396
 msgid "Update Episode"
-msgstr ""
+msgstr "Episode aktualisieren"
 
 #: larpwright.php:397
 msgid "Add New Episode"
-msgstr ""
+msgstr "Neuen Episode erstellen"
 
 #: larpwright.php:398
 msgid "New Episode"
-msgstr ""
+msgstr "Neuer Episode"
 
 #: larpwright.php:399
 msgid "Episodes"
-msgstr ""
+msgstr "Episoden"
 
 #: larpwright.php:425
 msgctxt "taxonomy general name"
 msgid "Moods"
-msgstr ""
+msgstr "Stimmungen"
 
 #: larpwright.php:426
 msgctxt "taxonomy singular name"
 msgid "Mood"
-msgstr ""
+msgstr "Stimmung"
 
 #: larpwright.php:427
 msgid "Search Moods"
-msgstr ""
+msgstr "Stimmungen durchsuchen"
 
 #: larpwright.php:428
 msgid "Popular Moods"
-msgstr ""
+msgstr "Beliebte Stimmungen"
 
 #: larpwright.php:429
 msgid "All Moods"
-msgstr ""
+msgstr "Alle Stimmungen"
 
 #: larpwright.php:432
 msgid "Edit Mood"
-msgstr ""
+msgstr "Stimmung bearbeiten"
 
 #: larpwright.php:433
 msgid "Update Mood"
-msgstr ""
+msgstr "Stimmung aktualisieren"
 
 #: larpwright.php:434
 msgid "Add New Mood"
-msgstr ""
+msgstr "Neue Stimmung erstellen"
 
 #: larpwright.php:435
 msgid "New Mood"
-msgstr ""
+msgstr "Neue Stimmung"
 
 #: larpwright.php:436
 msgid "Moods"
-msgstr ""
+msgstr "Stimmungen"
 
 #: larpwright.php:464
 msgctxt "post type general name"
 msgid "Locations"
-msgstr ""
+msgstr "Locations"
 
 #: larpwright.php:465
 msgctxt "post type singular name"
 msgid "Location"
-msgstr ""
+msgstr "Locations"
 
 #: larpwright.php:466
 msgid "Locations"
-msgstr ""
+msgstr "Locations"
 
 #: larpwright.php:467
 msgid "Parent Location"
-msgstr ""
+msgstr "Übergeordnete Location"
 
 #: larpwright.php:468
 msgid "All Locations"
-msgstr ""
+msgstr "Alle Locations"
 
 #: larpwright.php:469
 msgid "View Location"
-msgstr ""
+msgstr "Location ansehen"
 
 #: larpwright.php:470
 msgid "Add New Location"
-msgstr ""
+msgstr "Neue Location erstellen"
 
 #: larpwright.php:472
 msgid "Edit Location"
-msgstr ""
+msgstr "Location bearbeiten"
 
 #: larpwright.php:473
 msgid "Update Location"
-msgstr ""
+msgstr "Location aktualisieren"
 
 #: larpwright.php:474
 msgid "Search Location"
-msgstr ""
+msgstr "Locations durchsuchen"
 
 #: larpwright.php:482
 msgid "location"
-msgstr ""
+msgstr "location"
 
 #: larpwright.php:483
 msgid "Location descriptions"
-msgstr ""
+msgstr "Locationbeschreibungen"
 
 #: larpwright.php:523
 msgctxt "taxonomy general name"
 msgid "Size"
-msgstr ""
+msgstr "Größe"
 
 #: larpwright.php:524
 msgctxt "taxonomy singular name"
 msgid "Size"
-msgstr ""
+msgstr "Größe"
 
 #: larpwright.php:525
 msgid "Search Sizes"
-msgstr ""
+msgstr "Größen durchsuchen"
 
 #: larpwright.php:526
 msgid "All Sizes"
-msgstr ""
+msgstr "Alle Größen"
 
 #: larpwright.php:527
 msgid "Parent Size"
-msgstr ""
+msgstr "Übergeordnete Größe"
 
 #: larpwright.php:528
 msgid "Parent Size:"
-msgstr ""
+msgstr "Übergeordnete Größe:"
 
 #: larpwright.php:529
 msgid "Edit Size"
-msgstr ""
+msgstr "Größe bearbeiten"
 
 #: larpwright.php:530
 msgid "Update Size"
-msgstr ""
+msgstr "Größe aktualisieren"
 
 #: larpwright.php:531
 msgid "Add New Size"
-msgstr ""
+msgstr "Neue Größe erstellen"
 
 #: larpwright.php:532
 msgid "New Size"
-msgstr ""
+msgstr "Neue Größe"
 
 #: larpwright.php:533
 msgid "Sizes"
-msgstr ""
+msgstr "Größen"
 
 #: larpwright.php:559
 msgctxt "taxonomy general name"
 msgid "Features"
-msgstr ""
+msgstr "Merkmale"
 
 #: larpwright.php:560
 msgctxt "taxonomy singular name"
 msgid "Feature"
-msgstr ""
+msgstr "Merkmal"
 
 #: larpwright.php:561
 msgid "Search Features"
-msgstr ""
+msgstr "Merkmale durchsuchen"
 
 #: larpwright.php:562
 msgid "Popular Features"
-msgstr ""
+msgstr "Beliebte Merkmale"
 
 #: larpwright.php:563
 msgid "All Features"
-msgstr ""
+msgstr "Alle Merkmale"
 
 #: larpwright.php:566
 msgid "Edit Feature"
-msgstr ""
+msgstr "Merkmal bearbeiten"
 
 #: larpwright.php:567
 msgid "Update Feature"
-msgstr ""
+msgstr "Merkmal aktualisieren"
 
 #: larpwright.php:568
 msgid "Add New Feature"
-msgstr ""
+msgstr "Neues Merkmal erstellen"
 
 #: larpwright.php:569
 msgid "New Feature"
-msgstr ""
+msgstr "Neues Merkmal"
 
 #: larpwright.php:570
 msgid "Features"
-msgstr ""
+msgstr "Merkmale"
 
 #: larpwright.php:598
 msgctxt "post type general name"
 msgid "Props"
-msgstr ""
+msgstr "Requisiten"
 
 #: larpwright.php:599
 msgctxt "post type singular name"
 msgid "Prop"
-msgstr ""
+msgstr "Requisite"
 
 #: larpwright.php:600
 msgid "Props"
-msgstr ""
+msgstr "Requisiten"
 
 #: larpwright.php:601
 msgid "Parent Prop"
-msgstr ""
+msgstr "Übergeordnete Requisite"
 
 #: larpwright.php:602
 msgid "All Props"
-msgstr ""
+msgstr "Alle Requisiten"
 
 #: larpwright.php:603
 msgid "View Prop"
-msgstr ""
+msgstr "Requisite ansehen"
 
 #: larpwright.php:604
 msgid "Add New Prop"
-msgstr ""
+msgstr "Neue Requisite erstellen"
 
 #: larpwright.php:605
 msgid "Edit Prop"
-msgstr ""
+msgstr "Requisite bearbeiten"
 
 #: larpwright.php:607
 msgid "Update Prop"
-msgstr ""
+msgstr "Requisite aktualisieren"
 
 #: larpwright.php:608
 msgid "Search Prop"
-msgstr ""
+msgstr "Requisiten durchsuchen"
 
 #: larpwright.php:616
 msgid "prop"
-msgstr ""
+msgstr "prop"
 
 #: larpwright.php:617
 msgid "Props descriptions"
-msgstr ""
+msgstr "Requisitenbeschreibungen"
 
 #: larpwright.php:657
 msgctxt "taxonomy general name"
 msgid "Prop Types"
-msgstr ""
+msgstr "Requisitenarten"
 
 #: larpwright.php:658
 msgctxt "taxonomy singular name"
 msgid "Prop Type"
-msgstr ""
+msgstr "Requisitenart"
 
 #: larpwright.php:659
 msgid "Search Prop Types"
-msgstr ""
+msgstr "Requisitenarten durchsuchen"
 
 #: larpwright.php:660
 msgid "All Prop Types"
-msgstr ""
+msgstr "Alle Requisitenarten"
 
 #: larpwright.php:661
 msgid "Parent Prop Type"
-msgstr ""
+msgstr "Übergeordnete Requisitenart"
 
 #: larpwright.php:662
 msgid "Parent Prop Type:"
-msgstr ""
+msgstr "Übergeordnete Requisitenart:"
 
 #: larpwright.php:663
 msgid "Edit Prop Type"
-msgstr ""
+msgstr "Requisitenart bearbeiten"
 
 #: larpwright.php:664
 msgid "Update Prop Type"
-msgstr ""
+msgstr "Requisitenart aktualisieren"
 
 #: larpwright.php:665
 msgid "Add New Prop Type"
-msgstr ""
+msgstr "Neue Requisitenart erstellen"
 
 #: larpwright.php:666
 msgid "New Prop Type"
-msgstr ""
+msgstr "Neue Requisitenart"
 
 #: larpwright.php:667
 msgid "Prop Types"
-msgstr ""
+msgstr "Requisitenarten"
 
 #: larpwright.php:693
 msgctxt "taxonomy general name"
 msgid "Traits"
-msgstr ""
+msgstr "Eigenschaften"
 
 #: larpwright.php:694
 msgctxt "taxonomy singular name"
 msgid "Trait"
-msgstr ""
+msgstr "Eigenschaft"
 
 #: larpwright.php:695
 msgid "Search Traits"
-msgstr ""
+msgstr "Eigenschaften durchsuchen"
 
 #: larpwright.php:696
 msgid "Popular Traits"
-msgstr ""
+msgstr "Beliebte Eigenschaften"
 
 #: larpwright.php:697
 msgid "All Traits"
-msgstr ""
+msgstr "Alle Eigenschaften"
 
 #: larpwright.php:700
 msgid "Edit Trait"
-msgstr ""
+msgstr "Eigenschaft bearbeiten"
 
 #: larpwright.php:701
 msgid "Update Trait"
-msgstr ""
+msgstr "Eigenschaft aktualisieren"
 
 #: larpwright.php:702
 msgid "Add New Trait"
-msgstr ""
+msgstr "Neue Eigenschaft erstellen"
 
 #: larpwright.php:703
 msgid "New Trait"
-msgstr ""
+msgstr "Neue Eigenschaft"
 
 #: larpwright.php:704
 msgid "Traits"
-msgstr ""
+msgstr "Eigenschaften"
 
 #: larpwright.php:940
 #, php-format
 msgid ""
-"<p><strong>Larpwright Design Tools</strong> recommends changing the "
-"permalink structure to <code>%1$s</code> for optimal performance. You can "
-"change this setting <a href=\"%2$s\">here</a>.</p>"
+"<p><strong>Larpwright Design Tools</strong> recommends changing the permalink structure to <code>%1$s</code> for "
+"optimal performance. You can change this setting <a href=\"%2$s\">here</a>.</p>"
 msgstr ""
+"<p><strong>Larpwright Design Tools</strong> empfiehlt, die Permalink-Struktur auf <code>%1$s</code> zu ändern, um "
+"eine optimale Leistung zu erzielen. Sie können diese Einstellung <a href=\"%2$s\">hier</a> ändern.</p>"
