--- a/languages/larpwright-ja.po
+++ b/languages/larpwright-ja.po
@@ -1,737 +1,739 @@
-# POT for Plugin - Larpwright Design Tools (latest release) 
+# Translation for Plugin - Larpwright Design Tools (latest release) in Japanese
 # This file is distributed under the same license as the Plugin - Larpwright Design Tools (latest release) package.
 msgid ""
 msgstr ""
 "Project-Id-Version: Plugin - Larpwright Design Tools (latest release)\n"
 "POT-Creation-Date: 2023-03-31 15:39+0900\n"
-"PO-Revision-Date: 2023-05-08 16:16+0900\n"
+"PO-Revision-Date: 2023-05-08 16:00+0900\n"
 "Last-Translator: Björn-Ole Kamm <translateœb-ok.de>\n"
 "Language-Team: \n"
-"Language: en\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Poedit 3.2.2\n"
 
 #. Description of the plugin
 msgid "The plugin provides several custom post types and further functionality for creating larp scripts in a team."
 msgstr ""
+"このプラグインは、いくつかのカスタム投稿タイプや、チームでLARPスクリプトを作成するためのさらなる機能を提供します。"
 
 #: larpwright.php:58
 msgctxt "post type general name"
 msgid "Characters"
-msgstr ""
+msgstr "キャラクター"
 
 #: larpwright.php:59
 msgctxt "post type singular name"
 msgid "Character"
-msgstr ""
+msgstr "キャラクター"
 
 #: larpwright.php:60
 msgid "Characters"
-msgstr ""
+msgstr "キャラクター"
 
 #: larpwright.php:61
 msgid "Parent Character"
-msgstr ""
+msgstr "上位キャラクター"
 
 #: larpwright.php:62
 msgid "All Characters"
-msgstr ""
+msgstr "キャラクター一覧"
 
 #: larpwright.php:63
 msgid "View Character"
-msgstr ""
+msgstr "キャラクターを表示"
 
 #: larpwright.php:64
 msgid "Add New Character"
-msgstr ""
+msgstr "新しいキャラクターを追加"
 
 #: larpwright.php:65 larpwright.php:318 larpwright.php:471 larpwright.php:605
 msgid "Add New"
-msgstr ""
+msgstr "新規追加"
 
 #: larpwright.php:66
 msgid "Edit Character"
-msgstr ""
+msgstr "キャラクターを編集"
 
 #: larpwright.php:67
 msgid "Update Character"
-msgstr ""
+msgstr "キャラクターを更新"
 
 #: larpwright.php:68
 msgid "Search Character"
-msgstr ""
+msgstr "キャラクターを検索"
 
 #: larpwright.php:69 larpwright.php:322 larpwright.php:475 larpwright.php:609
 msgid "Not Found"
-msgstr ""
+msgstr "見つかりませんでした"
 
 #: larpwright.php:70 larpwright.php:323 larpwright.php:476 larpwright.php:610
 msgid "Not found in Trash"
-msgstr ""
+msgstr "ゴミ箱に見つかりません"
 
 #: larpwright.php:75
 msgid "character"
-msgstr ""
+msgstr "character"
 
 #: larpwright.php:76
 msgid "Character descriptions"
-msgstr ""
+msgstr "キャラクターの説明"
 
 #: larpwright.php:129
 msgctxt "taxonomy general name"
 msgid "Character Types"
-msgstr ""
+msgstr "キャラクタータイプ"
 
 #: larpwright.php:130
 msgctxt "taxonomy singular name"
 msgid "Character Type"
-msgstr ""
+msgstr "キャラクタータイプ"
 
 #: larpwright.php:131
 msgid "Search Character Types"
-msgstr ""
+msgstr "キャラクタータイプを検索"
 
 #: larpwright.php:132
 msgid "All Character Types"
-msgstr ""
+msgstr "キャラクタータイプ一覧"
 
 #: larpwright.php:133
 msgid "Parent Character Type"
-msgstr ""
+msgstr "上位キャラクタータイプ"
 
 #: larpwright.php:134
 msgid "Parent Character Type:"
-msgstr ""
+msgstr "上位キャラクタータイプ:"
 
 #: larpwright.php:135
 msgid "Edit Character Type"
-msgstr ""
+msgstr "キャラクタータイプを編集"
 
 #: larpwright.php:136
 msgid "Update Character Type"
-msgstr ""
+msgstr "キャラクタータイプを更新"
 
 #: larpwright.php:137
 msgid "Add New Character Type"
-msgstr ""
+msgstr "新しいキャラクタータイプを追加"
 
 #: larpwright.php:138
 msgid "New Character Type"
-msgstr ""
+msgstr "新しいキャラクタータイプ"
 
 #: larpwright.php:139
 msgid "Character Types"
-msgstr ""
+msgstr "キャラクタータイプ"
 
 #: larpwright.php:164
 msgctxt "taxonomy general name"
 msgid "Species"
-msgstr ""
+msgstr "種"
 
 #: larpwright.php:165
 msgctxt "taxonomy singular name"
 msgid "Species"
-msgstr ""
+msgstr "種"
 
 #: larpwright.php:166
 msgid "Search Species"
-msgstr ""
+msgstr "種を検索"
 
 #: larpwright.php:167
 msgid "All Species"
-msgstr ""
+msgstr "種一覧"
 
 #: larpwright.php:168
 msgid "Parent Species"
-msgstr ""
+msgstr "上位種"
 
 #: larpwright.php:169
 msgid "Parent Species:"
-msgstr ""
+msgstr "上位種:"
 
 #: larpwright.php:170
 msgid "Edit Species"
-msgstr ""
+msgstr "種を編集"
 
 #: larpwright.php:171
 msgid "Update Species"
-msgstr ""
+msgstr "種を更新"
 
 #: larpwright.php:172
 msgid "Add New Species"
-msgstr ""
+msgstr "新しい種を追加する"
 
 #: larpwright.php:173
 msgid "New Species"
-msgstr ""
+msgstr "新しい種"
 
 #: larpwright.php:174
 msgid "Species"
-msgstr ""
+msgstr "種"
 
 #: larpwright.php:200
 msgctxt "taxonomy general name"
 msgid "Professions"
-msgstr ""
+msgstr "専門"
 
 #: larpwright.php:201
 msgctxt "taxonomy singular name"
 msgid "Profession"
-msgstr ""
+msgstr "専門"
 
 #: larpwright.php:202
 msgid "Search Professions"
-msgstr ""
+msgstr "専門を検索"
 
 #: larpwright.php:203
 msgid "All Professions"
-msgstr ""
+msgstr "専門一覧"
 
 #: larpwright.php:204
 msgid "Parent Profession"
-msgstr ""
+msgstr "上位専門"
 
 #: larpwright.php:205
 msgid "Parent Profession:"
-msgstr ""
+msgstr "上位専門:"
 
 #: larpwright.php:206
 msgid "Edit Profession"
-msgstr ""
+msgstr "専門を編集"
 
 #: larpwright.php:207
 msgid "Update Profession"
-msgstr ""
+msgstr "専門を更新"
 
 #: larpwright.php:208
 msgid "Add New Profession"
-msgstr ""
+msgstr "新しい専門を追加する"
 
 #: larpwright.php:209
 msgid "New Profession"
-msgstr ""
+msgstr "新しい専門"
 
 #: larpwright.php:210
 msgid "Professions"
-msgstr ""
+msgstr "専門"
 
 #: larpwright.php:235
 msgctxt "taxonomy general name"
 msgid "In-Game Groups"
-msgstr ""
+msgstr "グループ"
 
 #: larpwright.php:236
 msgctxt "taxonomy singular name"
 msgid "In-Game Group"
-msgstr ""
+msgstr "グループ"
 
 #: larpwright.php:237
 msgid "Search Groups"
-msgstr ""
+msgstr "グループを検索"
 
 #: larpwright.php:238
 msgid "All In-Game Groups"
-msgstr ""
+msgstr "グループ一覧"
 
 #: larpwright.php:239
 msgid "Parent Group"
-msgstr ""
+msgstr "上位グループ"
 
 #: larpwright.php:240
 msgid "Parent Group:"
-msgstr ""
+msgstr "上位グループ："
 
 #: larpwright.php:241
 msgid "Edit Group"
-msgstr ""
+msgstr "グループを編集"
 
 #: larpwright.php:242
 msgid "Update Group"
-msgstr ""
+msgstr "グループを更新"
 
 #: larpwright.php:243
 msgid "Add New Group"
-msgstr ""
+msgstr "新しいグループを追加"
 
 #: larpwright.php:244
 msgid "New Group Name"
-msgstr ""
+msgstr "新しいグループ名"
 
 #: larpwright.php:245
 msgid "In-Game Groups"
-msgstr ""
+msgstr "グループ"
 
 #: larpwright.php:272
 msgctxt "taxonomy general name"
 msgid "Attitudes"
-msgstr ""
+msgstr "態度"
 
 #: larpwright.php:273
 msgctxt "taxonomy singular name"
 msgid "Attitude"
-msgstr ""
+msgstr "態度"
 
 #: larpwright.php:274
 msgid "Search Attitudes"
-msgstr ""
+msgstr "態度を検索"
 
 #: larpwright.php:275
 msgid "Popular Attitudes"
-msgstr ""
+msgstr "人気の態度"
 
 #: larpwright.php:276
 msgid "All Attitudes"
-msgstr ""
+msgstr "態度一覧"
 
 #: larpwright.php:279
 msgid "Edit Attitude"
-msgstr ""
+msgstr "態度を編集"
 
 #: larpwright.php:280
 msgid "Update Attitude"
-msgstr ""
+msgstr "態度を更新"
 
 #: larpwright.php:281
 msgid "Add New Attitude"
-msgstr ""
+msgstr "新しい態度を追加"
 
 #: larpwright.php:282
 msgid "New Attitude"
-msgstr ""
+msgstr "新しい態度"
 
 #: larpwright.php:283
 msgid "Attitudes"
-msgstr ""
+msgstr "態度"
 
 #: larpwright.php:311
 msgctxt "post type general name"
 msgid "Scenes"
-msgstr ""
+msgstr "シーン"
 
 #: larpwright.php:312
 msgctxt "post type singular name"
 msgid "Scene"
-msgstr ""
+msgstr "シーン"
 
 #: larpwright.php:313
 msgid "Scenes"
-msgstr ""
+msgstr "シーン"
 
 #: larpwright.php:314
 msgid "Parent Scene"
-msgstr ""
+msgstr "上位シーン"
 
 #: larpwright.php:315
 msgid "All Scenes"
-msgstr ""
+msgstr "シーン一覧"
 
 #: larpwright.php:316
 msgid "View Scene"
-msgstr ""
+msgstr "シーンを表示"
 
 #: larpwright.php:317
 msgid "Add New Scene"
-msgstr ""
+msgstr "新しいシーンを追加"
 
 #: larpwright.php:318
 msgid "Edit Scene"
-msgstr ""
+msgstr "シーンを編集"
 
 #: larpwright.php:320
 msgid "Update Scene"
-msgstr ""
+msgstr "シーンを更新"
 
 #: larpwright.php:321
 msgid "Search Scene"
-msgstr ""
+msgstr "シーンを検索"
 
 #: larpwright.php:328
 msgid "scene"
-msgstr ""
+msgstr "scene"
 
 #: larpwright.php:329
 msgid "Scene descriptions"
-msgstr ""
+msgstr "シーンの説明"
 
 #: larpwright.php:364
 msgid "Next scene"
-msgstr ""
+msgstr "次のシーン"
 
 #: larpwright.php:373
 msgid "Previous scene"
-msgstr ""
+msgstr "前のシーン"
 
 #: larpwright.php:389
 msgctxt "taxonomy general name"
 msgid "Episodes"
-msgstr ""
+msgstr "エピソード"
 
 #: larpwright.php:390
 msgctxt "taxonomy singular name"
 msgid "Episode"
-msgstr ""
+msgstr "エピソード"
 
 #: larpwright.php:391
 msgid "Search Episodes"
-msgstr ""
+msgstr "エピソードを検索"
 
 #: larpwright.php:392
 msgid "All Episodes"
-msgstr ""
+msgstr "エピソード一覧"
 
 #: larpwright.php:393
 msgid "Parent Episode"
-msgstr ""
+msgstr "上位エピソード"
 
 #: larpwright.php:394
 msgid "Parent Episode:"
-msgstr ""
+msgstr "上位エピソード:"
 
 #: larpwright.php:395
 msgid "Edit Episode"
-msgstr ""
+msgstr "エピソードを編集"
 
 #: larpwright.php:396
 msgid "Update Episode"
-msgstr ""
+msgstr "エピソードを更新"
 
 #: larpwright.php:397
 msgid "Add New Episode"
-msgstr ""
+msgstr "新しいエピソードを追加"
 
 #: larpwright.php:398
 msgid "New Episode"
-msgstr ""
+msgstr "新しいエピソード"
 
 #: larpwright.php:399
 msgid "Episodes"
-msgstr ""
+msgstr "エピソード"
 
 #: larpwright.php:425
 msgctxt "taxonomy general name"
 msgid "Moods"
-msgstr ""
+msgstr "気分"
 
 #: larpwright.php:426
 msgctxt "taxonomy singular name"
 msgid "Mood"
-msgstr ""
+msgstr "気分"
 
 #: larpwright.php:427
 msgid "Search Moods"
-msgstr ""
+msgstr "気分を検索"
 
 #: larpwright.php:428
 msgid "Popular Moods"
-msgstr ""
+msgstr "人気の気分"
 
 #: larpwright.php:429
 msgid "All Moods"
-msgstr ""
+msgstr "気分一覧"
 
 #: larpwright.php:432
 msgid "Edit Mood"
-msgstr ""
+msgstr "気分を編集"
 
 #: larpwright.php:433
 msgid "Update Mood"
-msgstr ""
+msgstr "気分を更新"
 
 #: larpwright.php:434
 msgid "Add New Mood"
-msgstr ""
+msgstr "新しい気分を追加"
 
 #: larpwright.php:435
 msgid "New Mood"
-msgstr ""
+msgstr "新しい気分"
 
 #: larpwright.php:436
 msgid "Moods"
-msgstr ""
+msgstr "気分"
 
 #: larpwright.php:464
 msgctxt "post type general name"
 msgid "Locations"
-msgstr ""
+msgstr "ロケ"
 
 #: larpwright.php:465
 msgctxt "post type singular name"
 msgid "Location"
-msgstr ""
+msgstr "ロケ"
 
 #: larpwright.php:466
 msgid "Locations"
-msgstr ""
+msgstr "ロケ"
 
 #: larpwright.php:467
 msgid "Parent Location"
-msgstr ""
+msgstr "上位ロケ"
 
 #: larpwright.php:468
 msgid "All Locations"
-msgstr ""
+msgstr "ロケ一覧"
 
 #: larpwright.php:469
 msgid "View Location"
-msgstr ""
+msgstr "ロケを表示"
 
 #: larpwright.php:470
 msgid "Add New Location"
-msgstr ""
+msgstr "新しいロケを追加"
 
 #: larpwright.php:472
 msgid "Edit Location"
-msgstr ""
+msgstr "ロケを編集"
 
 #: larpwright.php:473
 msgid "Update Location"
-msgstr ""
+msgstr "ロケを更新"
 
 #: larpwright.php:474
 msgid "Search Location"
-msgstr ""
+msgstr "ロケを検索"
 
 #: larpwright.php:482
 msgid "location"
-msgstr ""
+msgstr "location"
 
 #: larpwright.php:483
 msgid "Location descriptions"
-msgstr ""
+msgstr "ロケの説明"
 
 #: larpwright.php:523
 msgctxt "taxonomy general name"
 msgid "Size"
-msgstr ""
+msgstr "サイズ"
 
 #: larpwright.php:524
 msgctxt "taxonomy singular name"
 msgid "Size"
-msgstr ""
+msgstr "サイズ"
 
 #: larpwright.php:525
 msgid "Search Sizes"
-msgstr ""
+msgstr "サイズを検索"
 
 #: larpwright.php:526
 msgid "All Sizes"
-msgstr ""
+msgstr "サイズ一覧"
 
 #: larpwright.php:527
 msgid "Parent Size"
-msgstr ""
+msgstr "上位サイズ"
 
 #: larpwright.php:528
 msgid "Parent Size:"
-msgstr ""
+msgstr "上位サイズ:"
 
 #: larpwright.php:529
 msgid "Edit Size"
-msgstr ""
+msgstr "サイズを編集"
 
 #: larpwright.php:530
 msgid "Update Size"
-msgstr ""
+msgstr "サイズを更新"
 
 #: larpwright.php:531
 msgid "Add New Size"
-msgstr ""
+msgstr "新しいサイズの追加"
 
 #: larpwright.php:532
 msgid "New Size"
-msgstr ""
+msgstr "新しいサイズ"
 
 #: larpwright.php:533
 msgid "Sizes"
-msgstr ""
+msgstr "サイズ"
 
 #: larpwright.php:559
 msgctxt "taxonomy general name"
 msgid "Features"
-msgstr ""
+msgstr "仕様"
 
 #: larpwright.php:560
 msgctxt "taxonomy singular name"
 msgid "Feature"
-msgstr ""
+msgstr "仕様"
 
 #: larpwright.php:561
 msgid "Search Features"
-msgstr ""
+msgstr "仕様を検索"
 
 #: larpwright.php:562
 msgid "Popular Features"
-msgstr ""
+msgstr "人気の仕様"
 
 #: larpwright.php:563
 msgid "All Features"
-msgstr ""
+msgstr "仕様一覧"
 
 #: larpwright.php:566
 msgid "Edit Feature"
-msgstr ""
+msgstr "仕様を編集"
 
 #: larpwright.php:567
 msgid "Update Feature"
-msgstr ""
+msgstr "仕様を更新"
 
 #: larpwright.php:568
 msgid "Add New Feature"
-msgstr ""
+msgstr "新しい仕様を追加"
 
 #: larpwright.php:569
 msgid "New Feature"
-msgstr ""
+msgstr "新しい仕様"
 
 #: larpwright.php:570
 msgid "Features"
-msgstr ""
+msgstr "仕様"
 
 #: larpwright.php:598
 msgctxt "post type general name"
 msgid "Props"
-msgstr ""
+msgstr "支柱"
 
 #: larpwright.php:599
 msgctxt "post type singular name"
 msgid "Prop"
-msgstr ""
+msgstr "支柱"
 
 #: larpwright.php:600
 msgid "Props"
-msgstr ""
+msgstr "支柱"
 
 #: larpwright.php:601
 msgid "Parent Prop"
-msgstr ""
+msgstr "上位支柱"
 
 #: larpwright.php:602
 msgid "All Props"
-msgstr ""
+msgstr "支柱一覧"
 
 #: larpwright.php:603
 msgid "View Prop"
-msgstr ""
+msgstr "支柱を表示"
 
 #: larpwright.php:604
 msgid "Add New Prop"
-msgstr ""
+msgstr "新しい支柱を追加"
 
 #: larpwright.php:605
 msgid "Edit Prop"
-msgstr ""
+msgstr "支柱を編集"
 
 #: larpwright.php:607
 msgid "Update Prop"
-msgstr ""
+msgstr "支柱を更新"
 
 #: larpwright.php:608
 msgid "Search Prop"
-msgstr ""
+msgstr "支柱を検索"
 
 #: larpwright.php:616
 msgid "prop"
-msgstr ""
+msgstr "prop"
 
 #: larpwright.php:617
 msgid "Props descriptions"
-msgstr ""
+msgstr "支柱の説明"
 
 #: larpwright.php:657
 msgctxt "taxonomy general name"
 msgid "Prop Types"
-msgstr ""
+msgstr "支柱タイプ"
 
 #: larpwright.php:658
 msgctxt "taxonomy singular name"
 msgid "Prop Type"
-msgstr ""
+msgstr "支柱タイプ"
 
 #: larpwright.php:659
 msgid "Search Prop Types"
-msgstr ""
+msgstr "支柱タイプを検索"
 
 #: larpwright.php:660
 msgid "All Prop Types"
-msgstr ""
+msgstr "支柱タイプ一覧"
 
 #: larpwright.php:661
 msgid "Parent Prop Type"
-msgstr ""
+msgstr "上位支柱タイプ"
 
 #: larpwright.php:662
 msgid "Parent Prop Type:"
-msgstr ""
+msgstr "上位支柱タイプ:"
 
 #: larpwright.php:663
 msgid "Edit Prop Type"
-msgstr ""
+msgstr "支柱タイプを編集"
 
 #: larpwright.php:664
 msgid "Update Prop Type"
-msgstr ""
+msgstr "支柱タイプを更新"
 
 #: larpwright.php:665
 msgid "Add New Prop Type"
-msgstr ""
+msgstr "新しい支柱タイプを追加"
 
 #: larpwright.php:666
 msgid "New Prop Type"
-msgstr ""
+msgstr "新しい支柱タイプ"
 
 #: larpwright.php:667
 msgid "Prop Types"
-msgstr ""
+msgstr "支柱タイプ"
 
 #: larpwright.php:693
 msgctxt "taxonomy general name"
 msgid "Traits"
-msgstr ""
+msgstr "特性"
 
 #: larpwright.php:694
 msgctxt "taxonomy singular name"
 msgid "Trait"
-msgstr ""
+msgstr "特性"
 
 #: larpwright.php:695
 msgid "Search Traits"
-msgstr ""
+msgstr "特性を検索"
 
 #: larpwright.php:696
 msgid "Popular Traits"
-msgstr ""
+msgstr "人気の特性"
 
 #: larpwright.php:697
 msgid "All Traits"
-msgstr ""
+msgstr "特性一覧"
 
 #: larpwright.php:700
 msgid "Edit Trait"
-msgstr ""
+msgstr "特性を編集"
 
 #: larpwright.php:701
 msgid "Update Trait"
-msgstr ""
+msgstr "特性を更新"
 
 #: larpwright.php:702
 msgid "Add New Trait"
-msgstr ""
+msgstr "新しい特性の追加"
 
 #: larpwright.php:703
 msgid "New Trait"
-msgstr ""
+msgstr "新しい特性"
 
 #: larpwright.php:704
 msgid "Traits"
-msgstr ""
+msgstr "特性"
 
 #: larpwright.php:940
 #, php-format
 msgid ""
-"<p><strong>Larpwright Design Tools</strong> recommends changing the "
-"permalink structure to <code>%1$s</code> for optimal performance. You can "
-"change this setting <a href=\"%2$s\">here</a>.</p>"
+"<p><strong>Larpwright Design Tools</strong> recommends changing the permalink structure to <code>%1$s</code> for "
+"optimal performance. You can change this setting <a href=\"%2$s\">here</a>.</p>"
 msgstr ""
+"<p><strong>Larpwright Design Tools</strong>には、最適なパフォーマンスを実現するために、パーマリンク構造を"
+"<code>%1$s</code>に変更することを推奨しています。この設定は<a href=\"%2$s\">ここ</a>で変更することができます。</p>"
