--- a/languages/larpwright-de_DE.po
+++ b/languages/larpwright-de_DE.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Plugin - Larpwright Design Tools (latest release)\n"
 "POT-Creation-Date: 2023-03-31 15:39+0900\n"
-"PO-Revision-Date: 2023-05-30 18:38+0900\n"
+"PO-Revision-Date: 2023-06-22 16:03+0900\n"
 "Last-Translator: Björn-Ole Kamm <translateœb-ok.de>\n"
 "Language-Team: \n"
 "Language: de_DE\n"
@@ -220,21 +220,21 @@ msgstr "Professionen"
 
 #: larpwright.php:235
 msgctxt "taxonomy general name"
-msgid "In-Game Groups"
-msgstr "In-Game-Gruppen"
+msgid "Groups"
+msgstr "Gruppen"
 
 #: larpwright.php:236
 msgctxt "taxonomy singular name"
-msgid "In-Game Group"
-msgstr "In-Game-Gruppe"
+msgid "Group"
+msgstr "Gruppe"
 
 #: larpwright.php:237
 msgid "Search Groups"
 msgstr "Gruppen durchsuchen"
 
 #: larpwright.php:238
-msgid "All In-Game Groups"
-msgstr "Alle In-Game-Gruppen"
+msgid "All Groups"
+msgstr "Alle Gruppen"
 
 #: larpwright.php:239
 msgid "Parent Group"
@@ -261,8 +261,8 @@ msgid "New Group Name"
 msgstr "Neuer Gruppenname"
 
 #: larpwright.php:245
-msgid "In-Game Groups"
-msgstr "In-Game-Gruppen"
+msgid "Groups"
+msgstr "Gruppen"
 
 #: larpwright.php:272
 msgctxt "taxonomy general name"
@@ -356,13 +356,13 @@ msgstr "scene"
 msgid "Scene descriptions"
 msgstr "Szenenbeschreibungen"
 
-#: larpwright.php:364
-msgid "Next scene"
-msgstr "Nächste Szene"
-
-#: larpwright.php:373
+#: larpwright.php:368
 msgid "Previous scene"
 msgstr "Vorherige Szene"
+
+#: larpwright.php:371
+msgid "Next scene"
+msgstr "Nächste Szene"
 
 #: larpwright.php:389
 msgctxt "taxonomy general name"
@@ -866,15 +866,15 @@ msgstr "Neues Aktivitätskennwort"
 msgid "Tags"
 msgstr "Kennworte"
 
-#: larpwright.php:861
-msgid "Next activity"
-msgstr "Nächste Aktivität"
-
-#: larpwright.php:870
+#: larpwright.php:864
 msgid "Previous activity"
 msgstr "Vorherige Aktivität"
 
-#: larpwright.php:1107
+#: larpwright.php:867
+msgid "Next activity"
+msgstr "Nächste Aktivität"
+
+#: larpwright.php:1106
 #, php-format
 msgid ""
 "<p><strong>Larpwright Design Tools</strong> recommends changing the permalink structure to <code>%1$s</code> for "
